compiler/testData/diagnostics/tests/suppress/oneWarning/onFunction.kt
class C {
    suppress("REDUNDANT_NULLABLE")
    fun foo(): String?? = null <!USELESS_CAST!>as<!> Nothing??
}